--- a/web/dashboardTweet.html
+++ b/web/dashboardTweet.html
@@ -394,23 +394,23 @@
                             <!-- /.composite-line-chart -->
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <!-- composite-line-chart -->
-                            <!--Widgets must have 'widget' class in order to render their loading screen-->
-                            <div class="box box-primary widget">
-                                <div class="box-header">
-                                    <i class="glyphicon glyphicon-cloud"></i>
-                                    <h3 class="box-title">Hastags Cloud</h3>
-                                </div>
-                                <!-- box-body -->
-                                <div class="box-body chart-responsive" style="overflow: hidden" id="tag-cloud">
-                                </div>
-                                <!-- /.box-body -->
-                            </div>
-                            <!-- /.composite-line-chart -->
-                        </div>
-                    </div>
+                    <!--<div class="row">-->
+                        <!--<div class="col-lg-12">-->
+                            <!--&lt;!&ndash; composite-line-chart &ndash;&gt;-->
+                            <!--&lt;!&ndash;Widgets must have 'widget' class in order to render their loading screen&ndash;&gt;-->
+                            <!--<div class="box box-primary widget">-->
+                                <!--<div class="box-header">-->
+                                    <!--<i class="glyphicon glyphicon-cloud"></i>-->
+                                    <!--<h3 class="box-title">Hastags Cloud</h3>-->
+                                <!--</div>-->
+                                <!--&lt;!&ndash; box-body &ndash;&gt;-->
+                                <!--<div class="box-body chart-responsive" style="overflow: hidden" id="tag-cloud">-->
+                                <!--</div>-->
+                                <!--&lt;!&ndash; /.box-body &ndash;&gt;-->
+                            <!--</div>-->
+                            <!--&lt;!&ndash; /.composite-line-chart &ndash;&gt;-->
+                        <!--</div>-->
+                    <!--</div>-->
 
                 </section>
             </div>
