--- a/web/polymer-elements/number-chart/number-chart.html
+++ b/web/polymer-elements/number-chart/number-chart.html
@@ -133,7 +133,7 @@
                 this.$.chart.classList.add("dc-chart"); //add the dc-chart to allow dc.js to style the chart
 
 
-                dc.renderAll();
+//                dc.renderAll();
             }
         });
     </script>
