--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -333,7 +333,7 @@
                                 </div>
                                 <!-- box-body -->
                                 <div class="box-body chart-responsive">
-                                    <leaflet-map class="dc-element"></leaflet-map>
+                                    <!--<leaflet-map class="dc-element"></leaflet-map>-->
                                 </div>
                                 <!-- /.box-body -->
                             </div>
