--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -324,20 +324,20 @@
                         <!-- right col (We are only adding the ID to make the widgets sortable)-->
                         <section class="col-lg-7 connectedSortable">
 
-                            <!-- leaflet-map -->
-                            <!--Widgets must have 'widget' class in order to render their loading screen-->
-                            <div class="box box-primary widget">
-                                <div class="box-header">
-                                    <i class="fa fa-map-marker"></i>
-                                    <h3 class="box-title">Map</h3>
-                                </div>
-                                <!-- box-body -->
-                                <div class="box-body chart-responsive">
-                                    <leaflet-map class="dc-element"></leaflet-map>
-                                </div>
-                                <!-- /.box-body -->
-                            </div>
-                            <!-- /.leaflet-map -->
+                            <!--&lt;!&ndash; leaflet-map &ndash;&gt;-->
+                            <!--&lt;!&ndash;Widgets must have 'widget' class in order to render their loading screen&ndash;&gt;-->
+                            <!--<div class="box box-primary widget">-->
+                                <!--<div class="box-header">-->
+                                    <!--<i class="fa fa-map-marker"></i>-->
+                                    <!--<h3 class="box-title">Map</h3>-->
+                                <!--</div>-->
+                                <!--&lt;!&ndash; box-body &ndash;&gt;-->
+                                <!--<div class="box-body chart-responsive">-->
+                                    <!--<leaflet-map class="dc-element"></leaflet-map>-->
+                                <!--</div>-->
+                                <!--&lt;!&ndash; /.box-body &ndash;&gt;-->
+                            <!--</div>-->
+                            <!--&lt;!&ndash; /.leaflet-map &ndash;&gt;-->
 
                             <!--&lt;!&ndash; bar-chart &ndash;&gt;-->
                             <!--&lt;!&ndash;Widgets must have 'widget' class in order to render their loading screen&ndash;&gt;-->
