--- a/web/dashboardDbpedia.html
+++ b/web/dashboardDbpedia.html
@@ -71,6 +71,8 @@
     <!--dc.js-->
     <script type="text/javascript" src="plugins/dc/dc.js"></script>
 
+    <script type="text/javascript" src="plugins/ldf-client-browser.js"></script>
+
     <!-- ------------------------------- end/ SCRIPTS IMPORT ZONE ------------------------------ -->
 
 
@@ -98,7 +100,7 @@
     <!-- ------------------------------- end/ POLYMER COMPONENTS IMPORT ZONE ------------------- -->
 
 </head>
-<body unresolved demo="places" class="skin-blue sidebar-collapse sidebar-open">
+<body unresolved demo="dbpedia" class="skin-blue sidebar-collapse sidebar-open">
 <div class="wrapper">
 
     <header class="main-header">
@@ -252,92 +254,12 @@
                     <div class="row">
                         <div class="col-lg-9 col-xs-6">
 
-                            <!-- leaflet-marker-map -->
-                            <!--Widgets must have 'widget' class in order to render their loading screen-->
-                            <div class="box box-primary widget">
-                                <div class="box-header">
-                                    <i class="fa fa-map-marker"></i>
-                                    <h3 class="box-title">Map</h3>
-                                </div>
-                                <!-- box-body -->
-                                <div class="box-body chart-responsive">
-                                    <leaflet-marker-map class="dc-element"></leaflet-marker-map>
-                                </div>
-                                <!-- /.box-body -->
-                            </div>
-                            <!-- /.leaflet-marker-map -->
+
                         </div>
 
                         <div class="col-lg-3 col-xs-6">
 
-                            <!--Number chart is just the number in order to take advantage of adminLTE icons-->
-                            <!-- small box -->
-                            <div class="info-box bg-aqua">
-                                <span class="info-box-icon"><i class="glyphicon glyphicon-info-sign"></i></span>
-                                <div class="info-box-content">
-                                    <span class="info-box-text">Elements selected</span>
-                            <span class="info-box-number">
-                                <number-chart param="name" type="param"  class="dc-element"></number-chart>
-                            </span>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-name" style="width: 50%"></div>
-                                    </div>
-                        <span class="progress-description">
-                            <b class="percent-name">50%</b> of Total Selected </span>
-                                </div><!-- /.info-box-content -->
-                            </div>
 
-                            <!--Number chart is just the number in order to take advantage of adminLTE icons-->
-                            <!-- small box -->
-                            <div class="info-box bg-green">
-                                <span class="info-box-icon"><i class="ion ion-android-locate"></i></span>
-                                <div class="info-box-content">
-                                    <span class="info-box-text">Polarities under selection</span>
-                            <span class="info-box-number">
-                                <number-chart param="polarity" type="param" class="dc-element"></number-chart>
-                            </span>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-polarity" style="width: 50%"></div>
-                                    </div>
-                            <span class="progress-description">
-                                <b class="percent-polarity">50%</b> of Total Selected</span>
-                                </div><!-- /.info-box-content -->
-                            </div>
-
-                            <!--Number chart is just the number in order to take advantage of adminLTE icons-->
-                            <!-- small box -->
-                            <div class="info-box bg-red">
-                                <span class="info-box-icon"><i class="ion ion-android-happy"></i></span>
-                                <div class="info-box-content">
-                                    <span class="info-box-text">Attractions</span>
-                            <span class="info-box-number">
-                                <number-chart param="category" type="value" valueToCount="attraction" class="dc-element"></number-chart>
-                            </span>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-attraction" style="width: 50%"></div>
-                                    </div>
-                            <span class="progress-description">
-                                <b class="percent-attraction">50%</b> of Total Selected </span>
-                                </div><!-- /.info-box-content -->
-                            </div><!-- ./col -->
-
-                            <!--Number chart is just the number in order to take advantage of adminLTE icons-->
-                            <!-- small box -->
-                            <div class="info-box bg-yellow">
-                                <span class="info-box-icon"><i class="ion ion-android-home"></i></span>
-                                <div class="info-box-content">
-                                    <span class="info-box-text">Accommodation</span>
-                            <span class="info-box-number">
-                                <number-chart param="category" type="value" valueToCount="accommodation" class="dc-element">
-
-                                </number-chart></span>
-                                    <div class="progress">
-                                        <div class="progress-bar progress-bar-accommodation" style="width: 50%"></div>
-                                    </div>
-                            <span class="progress-description">
-                                <b class="percent-accommodation">50%</b> of Total Selected </span>
-                                </div><!-- /.info-box-content -->
-                            </div>
 
 
                         </div>
@@ -351,78 +273,21 @@
 
                     <div class="row">
                         <div class="col-lg-3 col-xs-6">
-                            <!-- pie-chart -->
-                            <!--Widgets must have 'widget' class in order to render their loading screen-->
-                            <div class="box box-primary widget">
-                                <div class="box-header">
-                                    <i class="glyphicon glyphicon-filter"></i>
-                                    <h3 class="box-title" id="here">Category</h3>
-                                </div>
-                                <!-- box-body -->
-                                <div class="box-body chart-responsive" style="overflow: hidden">
-                                    <pie-chart param="category" class="dc-element"></pie-chart>
-                                </div>
-                                <!-- /.box-body -->
-                            </div>
-                            <!-- /.pie-chart -->
+
 
                         </div><!-- ./col -->
                         <div class="col-lg-3 col-xs-6">
-                            <!-- pie-chart -->
-                            <!--Widgets must have 'widget' class in order to render their loading screen-->
-                            <div class="box box-primary widget">
-                                <div class="box-header">
-                                    <i class="glyphicon glyphicon-filter"></i>
-                                    <h3 class="box-title" id="here">City</h3>
-                                </div>
-                                <!-- box-body -->
-                                <div class="box-body chart-responsive" style="overflow: hidden">
-                                    <pie-chart param="location" class="dc-element"></pie-chart>
-                                </div>
-                                <!-- /.box-body -->
-                            </div>
-                            <!-- /.pie-chart -->
+
 
                         </div><!-- ./col -->
 
 
                         <div class="col-lg-3 col-xs-6">
-                            <!-- row-chart -->
-                            <!--Widgets must have 'widget' class in order to render their loading screen-->
-                            <div class="box box-primary widget">
-                                <div class="box-header">
-                                    <i class="glyphicon glyphicon-signal"></i>
-                                    <h3 class="box-title">Number of Reviews</h3>
-                                    <div class="box-tools pull-right">
-                                        <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-                                        <button class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
-                                    </div>
-                                </div>
-                                <!-- box-body -->
-                                <div class="box-body chart-responsive" style="overflow: hidden">
-                                    <bar-chart param="numReviews" xMin=0 xMax=20 class="dc-element"></bar-chart>
-                                    <div class="clearfix"></div>
-                                </div>
-                                <!-- /.box-body -->
-                            </div>
-                            <!-- /.row-chart -->
+
                         </div><!-- ./col -->
 
                         <div class="col-lg-3 col-xs-6">
-                            <!-- bubble-chart -->
-                            <!--Widgets must have 'widget' class in order to render their loading screen-->
-                            <div class="box box-primary widget">
-                                <div class="box-header">
-                                    <i class="glyphicon glyphicon-record"></i>
-                                    <h3 class="box-title">Polarity</h3>
-                                </div>
-                                <!-- box-body -->
-                                <div class="box-body chart-responsive" style="overflow: hidden">
-                                    <bubble-chart param="polarity" xMax=10 yMax=20000 radius=10000 class="dc-element"></bubble-chart>
-                                </div>
-                                <!-- /.box-body -->
-                            </div>
-                            <!-- /.bubble-chart -->
+
                         </div><!-- ./col -->
 
                     </div>
@@ -432,25 +297,7 @@
                     <div class="row">
                         <!-- Left col -->
                         <div class="col-lg-6">
-                            <!-- row-chart -->
-                            <!--Widgets must have 'widget' class in order to render their loading screen-->
-                            <div class="box box-primary widget">
-                                <div class="box-header">
-                                    <i class="glyphicon glyphicon-star"></i>
-                                    <h3 class="box-title">Reviews</h3>
-                                    <div class="box-tools pull-right">
-                                        <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-                                        <button class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
-                                    </div>
-                                </div>
-                                <!-- box-body -->
-                                <div class="box-body chart-responsive" style="overflow: hidden">
-                                    <review-widget class="dc-element"></review-widget>
-                                    <div class="clearfix"></div>
-                                </div>
-                                <!-- /.box-body -->
-                            </div>
-                            <!-- /.row-chart -->
+
 
                         </div><!-- ./col -->
                         <!-- /.Left col -->
@@ -459,27 +306,7 @@
 
 
 
-                            <!-- Custom dc widget table-->
-                            <div id="crossFilterDCTest3" class="box box-primary widget">
-                                <div class="box-header">
-                                    <i class="glyphicon glyphicon-list-alt"></i>
-                                    <h3 class="box-title">Results Table</h3>
-                                    <div class="box-tools pull-right">
-                                        <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-                                        <button class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i></button>
-                                    </div>
-                                </div>
-                                <!--box-body -->
-                                <div class="box-body chart-responsive">
 
-                                    <sortable-table params="name, polarity, address, numReviews" class="bootstrap dc-element" page="{{page}}" pagesize="8" footertemplate="defaultPager">
-
-                                    </sortable-table>
-
-                                </div>
-                                <!--/.box-body -->
-                            </div>
-                            <!-- /.Custom dc widget table-->
 
 
 
