--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -78,7 +78,7 @@
     <link rel="import" href="polymer-elements/pie-chart/pie-chart.html">
     <link rel="import" href="polymer-elements/bar-chart/bar-chart.html">
     <link rel="import" href="polymer-elements/number-chart/number-chart.html">
-    <link rel="import" href="polymer-elements/leaflet-map/leaflet-map.html">
+    <link rel="import" href="polymer-elements/leaflet-marker-map/leaflet-marker-map.html">
 
     <link rel="import" href="bower_components/sortable-table/sortable-table.html">
     <link rel="stylesheet"
@@ -333,7 +333,7 @@
                                 </div>
                                 <!-- box-body -->
                                 <div class="box-body chart-responsive">
-                                    <!--<leaflet-map class="dc-element"></leaflet-map>-->
+                                    <leaflet-marker-map class="dc-element"></leaflet-marker-map>
                                 </div>
                                 <!-- /.box-body -->
                             </div>
