--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -80,6 +80,8 @@
     <link rel="import" href="polymer-elements/number-chart/number-chart.html">
     <link rel="import" href="polymer-elements/leaflet-marker-map/leaflet-marker-map.html">
 
+    <!--<link rel="import" href="polymer-elements/leaflet-map/leaflet-map.html">-->
+
     <link rel="import" href="bower_components/sortable-table/sortable-table.html">
     <link rel="stylesheet"
           href="bower_components/sortable-table/css/bootstrap.css" shim-shadowdom>
@@ -334,6 +336,7 @@
                                 <!-- box-body -->
                                 <div class="box-body chart-responsive">
                                     <leaflet-marker-map class="dc-element"></leaflet-marker-map>
+                                    <!--<leaflet-map class="dc-element"></leaflet-map>-->
                                 </div>
                                 <!-- /.box-body -->
                             </div>
