--- a/web/polymer-elements/leaflet-marker-map/leaflet-marker-map.html
+++ b/web/polymer-elements/leaflet-marker-map/leaflet-marker-map.html
@@ -2,7 +2,7 @@
 
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-<script src="dc.leaflet.custom.js"></script>
+<script src="dc.leaflet.marker.custom.js"></script>
 <script src="leaflet.markercluster.js"></script>
 <script src="sparql-geojson.js"></script>
 
