--- a/web/polymer-elements/faceted-search/faceted-search.html
+++ b/web/polymer-elements/faceted-search/faceted-search.html
@@ -205,16 +205,16 @@
                 }
 
                 //take all value-default classed spans and highlight them
-                var spans = this.shadowRoot.querySelectorAll('.value-default');
+                var spans = this.shadowRoot.querySelectorAll('.value-primary');
                 for (var j= 0; j < spans.length; j++) {
-                    spans[j].classList.add("value-primary");
-                    spans[j].classList.remove("value-default");
+                    spans[j].classList.remove("value-primary");
+                    spans[j].classList.add("value-default");
                 }
                 //take all value-default classed badges and highlight them
                 var badges = this.shadowRoot.querySelectorAll('.badge');
                 for (var j= 0; j < badges.length; j++) {
-                    if(!badges[j].classList.contains("badge-info")){
-                        badges[j].classList.add("badge-info");
+                    if(badges[j].classList.contains("badge-info")){
+                        badges[j].classList.remove("badge-info");
                     }
 
                 }
