Sparql Editor created

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <!-- ------------------------------- STYLE LINKS ZONE -------------------------------------- -->
 
-  <link href='//cdn.jsdelivr.net/yasr/2.6.1/yasr.min.css' rel='stylesheet' type='text/css'/>
+  <link href='styles/yasr.min.css' rel='stylesheet' type='text/css'/>
   <link href='//cdn.jsdelivr.net/yasqe/2.6.2/yasqe.min.css' rel='stylesheet' type='text/css'/>
 
   <!-- ------------------------------- end/ STYLE LINKS ZONE --------------------------------- -->
@@ -183,9 +183,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <!-- endbuild-->
   <script src="scripts/es.js"></script>
   <script src='//cdn.jsdelivr.net/yasqe/2.6.2/yasqe.bundled.min.js'></script>
-  <script src='//cdn.jsdelivr.net/yasqe/2.6.2/yasqe.min.js'></script>
   <script src='//cdn.jsdelivr.net/yasr/2.6.1/yasr.bundled.min.js'></script>
-  <script src='//cdn.jsdelivr.net/yasr/2.6.1/yasr.min.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 </body>
 
