ldf-client added

--- a/elements/elements.html
+++ b/elements/elements.html
@@ -29,6 +29,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/chart-elements/chart-elements.html">
 <link rel="import" href="../bower_components/yasgui/yasgui.html">
 <link rel="import" href="../bower_components/sentiment-chart/sentiment-chart.html">
+<link rel="import" href="../bower_components/ldf-client/ldf-client.html">
 
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
